<resources>
    <string name="app_name">Pycon Africa</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">6–10 Aug,2019</string>
    <string name="nav_header_subtitle">Accra,Ghana</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_general">General Info</string>
    <string name="menu_schedule">Schedules</string>
    <string name="menu_special">Special Events</string>
    <string name="menu_sponsors">Sponsors</string>
    <string name="menu_social">Social Media</string>
    <string name="menu_todo">To-Do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_pyconafricablog">Pycon Africa Blog</string>
    <string name="menu_website">Pycon Africa Website</string>
    <string name="menu_youtube">YouTube</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_back">Social Media</string>
    <string name="menu_facebook">Facebook</string>
    <!--Links-->
    <string name="py_twitter">https://twitter.com/pyconafrica</string>
    <string name="py_facebook">https://facebook.com/pyconafrica</string>
    <string name="py_youtube">https://youtube.com/noahalorwu</string>
    <string name="py_website">https://pycon.africa</string>
    <string name="py_blog">https://pyconafrica.blogspot.com</string>
    <string name="maps">https://goo.gl/maps/xzvxYpwpAbCLgYMFA</string>
    <string name="venueLocation">Bank of Ghana Auditorium</string>

    <string name="title_activity_todos">Todos</string>
    <string name="lbl_new_todo_title">New Todo</string>
    <string name="lbl_edit_todo_title">Edit Todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="general_info_dialog_title">General Information</string>
    <string name="wifi_key">PyConAfrica2019</string>
    <string name="about_conference"><b>Pycon Africa</b>
        is the first pan-African gathering of the various Python communities and Pythonistas from over 6 different
        countries on the continent, and many more from the diaspora using and developing the open-source Python
        programming language.\n\nIt is endorsed by the <b>Python Software Foundation</b> and is organized by a
        multi-national team of volunteers on behalf of the global Python Community. The conference is expected to
        attract over 250 professionals, enthusiasts, and student delegates from Africa and beyond.\n\n<b>PyCon</b> is a
        diverse conference dedicated to providing an enjoyable experience to everyone.\nHelp us do this by following our
        code of conduct: https://pycon.africa/conduct
    </string>
    <string name="gen_info">General Information</string>
    <string name="sponsor_level">Bronze</string>
    <string name="sponsor_name">Real Python</string>
    <string name="hint_todo">What do you have to do?</string>

</resources>
